--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/mtrabelsi/sass-react-designer-boilerplate#readme",
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "^7.0.1",
+    "node-sass": "^4.9.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   }
